--- a/projeto-integrador/src/main/resources/templates/index.html
+++ b/projeto-integrador/src/main/resources/templates/index.html
@@ -1,86 +1,172 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="modelo/template :: head">
-<meta charset="UTF-8">
-<title>Usuario Management System</title>
-
-</head>
-<body>
-<header th:replace="modelo/template :: header"> </header>
-	<div class="container my-2">
-	<h1>Lista de Usuarios</h1>
-		
-		<a th:href = "@{/showNewUsuariosForm}" class = "btn btn-primary btn-sm mb-3"> Adicionar Usuario </a>
-		
-			<table border="1" class="table table-striped table-responsive-md">
-				<thead>
-					<tr>
-						<th>
-							<a th:href = "@{'/page/ + ${currentPage} + '?sortField=nome&sortDir = ' + ${reverseSortDir}}">
-								Nome do Usuario</a>
-						</th>
-						<th>
-							<a th:href = "@{'/page/ + ${currentPage}}">
-								CPF do Usuario</a>
-						</th>
-						<th>
-							<a th:href = "@{'/page/ + ${currentPage}}">
-								Email do Usuario</a>
-						</th>
-						<th>
-							<a th:href = "@{'/page/ + ${currentPage}}">
-								Nivel do Usuario</a>
-						</th>
-						<th>
-							<a th:href = "@{'/page/ + ${currentPage}}">
-								Telefone do Usuario</a>
-						</th>
-						<th>Ações</th>
-					</tr>
-			</thead>
-			<tbody>
-				<tr th:each="usuarios : ${listUsuarios}">
-					<td th:text="${usuarios.nome}"></td>
-					<td th:text="${usuarios.cpf}"></td>
-					<td th:text="${usuarios.email}"></td>
-					<td th:text="${usuarios.nivel}"></td>
-					<td th:text="${usuarios.telefone}"></td>
-					<td> <a th:href="@{/showFormForUpdate/{id}(id=${usuarios.id})}" class="btn btn-primary">Update</a>
-						<a th:href="@{/deleteUsuarios/{id}(id=${usuarios.id})}" class="btn btn-danger">Delete</a></td>
-				</tr>
-			</tbody>
-
-		</table>
-		
-		<div th:if = "${totalPages > 1}">
-			
-			<div class = "row col-sm-10">
-			
-				<div class = "col-sm-2">
-					Total Rows: [[${totalItems}]]
-				</div>
-				<div class = "col-sm-1">
-					<span th:each = "i: ${#numbers.sequence(1, totalPages)}">
-						<a th:if = "${currentPage != i}" th:href = "@{'/page/' + ${i}}">[[${i}]]</a>
-						<span th:unless = "${currentPage != i}">[[${i}]]</span> 	&nbsp; &nbsp;	
-					</span>
-				</div>
-				<div class = "col-sm-1">
-						<a th:if = "${currentPage < totalPages}" th:href = "@{'/page/' + ${currentPage + 1}}">Next</a>
-						<span th:unless = "${currentPage < totalPages}">Next</span>
-				</div>
-				
-				<div class = "col-sm-1">
-						<a th:if = "${currentPage < totalPages}" th:href = "@{'/page/' + ${currentPage + 1}}">Last</a>
-						<span th:unless = "${currentPage < totalPages}">Last</span>
-				</div>
-			
-			</div>
-		
-		</div>
-		
-	</div>
-
-</body>
-<footer th:replace="modelo/template :: footer"></footer>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>Index - Beyond Learning</title>
+        <!-- Favicon-->
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <!-- Bootstrap Icons-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
+        <!-- SimpleLightbox plugin CSS-->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link th:href="@{/css/styles.css}" rel="stylesheet" />
+    </head>
+    <body id="page-top">
+        <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+            <div class="container px-4 px-lg-5">
+                <a class="navbar-brand" href="#page-top">Beyond Learning</a>
+                <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ms-auto my-2 my-lg-0">
+                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#singup">Sing Up</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- Masthead-->
+        <header class="masthead">
+            <div class="container px-4 px-lg-5 h-100">
+                <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
+                    <div class="col-lg-8 align-self-end">
+                        <h1 class="text-white font-weight-bold">Bem vindo a Beyond Learning</h1>
+                        <hr class="divider" />
+                    </div>
+                    <div class="col-lg-8 align-self-baseline">
+                        <p class="text-white-75 mb-5"></p>
+                        <a class="btn btn-primary btn-xl" th:href="@{/login}">Sign in</a>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <!-- About-->
+        <section class="page-section bg-primary" id="singup">
+            <div class="container px-4 px-lg-5">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-lg-8 text-center">
+                        <h2 class="text-white mt-0">A possibilidade de realizarmos um sonho é o que torna a vida interessante. </h2>
+                        <hr class="divider divider-light" />
+                        <p class="text-white-75 mb-4">Venha conosco!</p>
+                        <a class="btn btn-light btn-xl" th:href="@{/register}">Cadastre-se</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Services-->
+        <section class="page-section" id="about">
+            <div class="container px-4 px-lg-5">
+                <h2 class="text-center mt-0">Sobre nós</h2>
+                <hr class="divider" />
+                <div class="row gx-4 gx-lg-5">
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <div class="mb-2"><i class="bi-gem fs-1 text-primary"></i></div>
+                            <h3 class="h4 mb-2">Ideias brilhantes</h3>
+                            <p class="text-muted mb-0">Projetos desenvolvidos especialmente para nossos alunos!</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <div class="mb-2"><i class="bi-laptop fs-1 text-primary"></i></div>
+                            <h3 class="h4 mb-2">Tecnologia</h3>
+                            <p class="text-muted mb-0">Nós estamos sempre integrados ao mundo moderno!</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <div class="mb-2"><i class="bi-globe fs-1 text-primary"></i></div>
+                            <h3 class="h4 mb-2">Conhecimento</h3>
+                            <p class="text-muted mb-0">Sempre acompanhando as mudanças!</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
+                            <h3 class="h4 mb-2">Feito com amor</h3>
+                            <p class="text-muted mb-0">Tudo feito com vontade!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Portfolio-->
+        <div id="portfolio">
+            <div class="container-fluid p-0">
+                <div class="row g-0">
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg" title="Hardware">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="..." />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">Hardware</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg" title="Softwares">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="..." />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name"> Softwares </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg" title="Inteligência Artificial">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="..." />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">IA</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg" title="Desenvolvimento mobile">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="..." />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">Desenvolvimento mobile</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg" title="Análise de dados">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="..." />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">Análise de dados</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg" title="Gestão">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
+                            <div class="portfolio-box-caption p-3">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">Gestão</div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Footer-->
+        <footer class="bg-light py-5">
+            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2021 - Beyond Learning</div></div>
+        </footer>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- SimpleLightbox plugin JS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
+        <!-- Core theme JS-->
+        <script th:src="@{/js/scripts.js}"></script>
+    </body>
 </html>
