--- a/projeto-integrador/src/main/resources/templates/users.html
+++ b/projeto-integrador/src/main/resources/templates/users.html
@@ -66,7 +66,7 @@
                 <i class="fas fa-calendar"></i>
                 <span>Eventos</span>
             </a>
-            <a th:href = "@{/}">
+            <a th:href = "@{/logout}">
                 <i class="fas fa-sign-out-alt"></i>
                 <span >Sair</span>
             </a>
